fix: Fixed unintentional image stretching

--- a/src/components/KillerBox/style.scss
+++ b/src/components/KillerBox/style.scss
@@ -21,6 +21,7 @@
 
   .icon {
     width         : 2.4em;
+    height        : auto;
     vertical-align: middle;
     outline       : 1px solid #da47476e;
     margin-right  : 0.75em;
