--- a/src/components/PerkBox/style.scss
+++ b/src/components/PerkBox/style.scss
@@ -25,6 +25,7 @@
     margin-bottom : -1em;
     vertical-align: middle;
     margin-right  : 0.5em;
+    height        : auto;
   }
 }
 
