--- a/src/components/SurvivorBox/style.scss
+++ b/src/components/SurvivorBox/style.scss
@@ -21,6 +21,7 @@
 
   .icon {
     width         : 2.4em;
+    height        : auto;
     vertical-align: middle;
     outline       : 1px solid #47b0da6e;
     margin-right  : 0.75em;
